--- a/Documents[Obsidian]/Plant_Hacking/.obsidian/workspace
+++ b/Documents[Obsidian]/Plant_Hacking/.obsidian/workspace
@@ -4,13 +4,24 @@
     "type": "split",
     "children": [
       {
-        "id": "b44ae3e833b3995f",
+        "id": "bdd5ab19dcbc40da",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "README.md",
+            "file": "Kicad/Brainstorming.md",
             "mode": "source"
+          }
+        }
+      },
+      {
+        "id": "d3b257f24a112dcd",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "Kicad/Brainstorming.md",
+            "mode": "preview"
           }
         }
       }
@@ -68,7 +79,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "README.md",
+                "file": "Kicad/Brainstorming.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,14 +97,16 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "b44ae3e833b3995f",
+  "active": "bdd5ab19dcbc40da",
   "lastOpenFiles": [
+    "Kicad/Brainstorming.md",
+    "Kicad/Modules/Module_Sensor_Inside/Module_Sensor_Inside.md",
+    "Code/Code.md",
+    "Kicad/Modules/Module_Controller/Module_Controller.md",
     "README.md",
     "Code/Benchmarks.md",
-    "Kicad/Modules/Module_Sensor_Inside/Module_Sensor_Inside.md",
     "Kicad/Modules/Module_Pump/Module_Pump.md",
     "Kicad/Modules/Module_Plant/Module_Plant.md",
-    "Kicad/Modules/Module_Light/Module_Light.md",
-    "Kicad/Modules/Module_Controller/Module_Controller.md"
+    "Kicad/Modules/Module_Light/Module_Light.md"
   ]
 }
